Actions
Bug #10485
closedipsecesp: cast between incompatible function types
Start date:
2019-03-02
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build error with gcc 8:
../../common/inet/ip/ipsecesp.c:135:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (pfi_t)putnext, NULL, ipsecesp_open, ipsecesp_close, NULL, &info, ^ ../../common/inet/ip/ipsecesp.c:140:2: error: cast between incompatible function types from 'void (*)(queue_t *, mblk_t *)' {aka 'void (*)(struct queue *, struct msgb *)'} to 'int (*)()' [-Werror=cast-function-type] (pfi_t)ipsecesp_wput, NULL, ipsecesp_open, ipsecesp_close, NULL, &info, ^ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9c451ec7591162657edd746f6b7ca3b402fe1d8f
commit 9c451ec7591162657edd746f6b7ca3b402fe1d8f Author: Toomas Soome <tsoome@me.com> Date: 2019-03-12T08:23:38.000Z 10485 ipsecesp: cast between incompatible function types Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: C Fraire <cfraire@me.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions